--- a/Tray/Tray.csproj
+++ b/Tray/Tray.csproj
@@ -97,6 +97,11 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="atk-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f, processorArchitecture=MSIL" />
+    <Reference Include="gdk-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f, processorArchitecture=MSIL" />
+    <Reference Include="glib-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f, processorArchitecture=MSIL" />
+    <Reference Include="gtk-dotnet, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f, processorArchitecture=MSIL" />
+    <Reference Include="gtk-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f, processorArchitecture=MSIL" />
     <Reference Include="MetroFramework, Version=1.2.0.3, Culture=neutral, PublicKeyToken=5f91a84759bf584a, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\libs\MetroFramework.dll</HintPath>
@@ -130,21 +135,24 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ITray.cs" />
     <Compile Include="NotificationGUI.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="NotificationGUI.Designer.cs">
       <DependentUpon>NotificationGUI.cs</DependentUpon>
     </Compile>
-    <Compile Include="NotificationIcon.cs" />
+    <Compile Include="Tray.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Unix\UnixTray.cs" />
+    <Compile Include="Windows\WindowsTray.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="NotificationGUI.resx">
       <DependentUpon>NotificationGUI.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="NotificationIcon.resx">
-      <DependentUpon>NotificationIcon.cs</DependentUpon>
+    <EmbeddedResource Include="Tray.resx">
+      <DependentUpon>Tray.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
@@ -153,6 +161,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="logo.ico" />
+    <None Include="Resources\logo.ico" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Core\Core.csproj">
@@ -160,6 +169,7 @@
       <Name>Core</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
