--- a/FOGService.Tests/FOGService.Tests.csproj
+++ b/FOGService.Tests/FOGService.Tests.csproj
@@ -92,18 +92,18 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
-    <Compile Include="Handlers\Bus\Bus.cs" />
-    <Compile Include="Handlers\Middleware\Authentication.cs" />
-    <Compile Include="Handlers\Middleware\Configuration.cs" />
-    <Compile Include="Handlers\Middleware\Response.cs" />
-    <Compile Include="Handlers\Settings\Settings.cs" />
-    <Compile Include="Handlers\User\User.cs" />
-    <Compile Include="Handlers\Data\Transform.cs" />
-    <Compile Include="Handlers\Data\Generate.cs" />
-    <Compile Include="Handlers\Data\DPAPI.cs" />
-    <Compile Include="Handlers\Data\RSA.cs" />
-    <Compile Include="Handlers\Data\AES.cs" />
-    <Compile Include="Handlers\Middleware\Communication.cs" />
+    <Compile Include="Core\Bus\Bus.cs" />
+    <Compile Include="Core\Middleware\Authentication.cs" />
+    <Compile Include="Core\Middleware\Configuration.cs" />
+    <Compile Include="Core\Middleware\Response.cs" />
+    <Compile Include="Core\Settings\Settings.cs" />
+    <Compile Include="Core\User\User.cs" />
+    <Compile Include="Core\Data\Transform.cs" />
+    <Compile Include="Core\Data\Generate.cs" />
+    <Compile Include="Core\Data\DPAPI.cs" />
+    <Compile Include="Core\Data\RSA.cs" />
+    <Compile Include="Core\Data\AES.cs" />
+    <Compile Include="Core\Middleware\Communication.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
