--- a/FOGService.Tests/FOGService.Tests.csproj
+++ b/FOGService.Tests/FOGService.Tests.csproj
@@ -93,6 +93,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Core\Bus\Bus.cs" />
+    <Compile Include="Core\Data\Hash.cs" />
     <Compile Include="Core\Middleware\Authentication.cs" />
     <Compile Include="Core\Middleware\Configuration.cs" />
     <Compile Include="Core\Middleware\Response.cs" />
