--- a/Tray/app.config
+++ b/Tray/app.config
@@ -4,6 +4,15 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" />
   </startup>
+  <superSocket>
+    <servers>
+      <server name="SuperWebSocket" serverTypeName="SuperWebSocket" ip="127.0.0.1" port="1277">
+      </server>
+    </servers>
+    <serverTypes>
+      <add name="SuperWebSocket" type="SuperWebSocket.WebSocketServer, SuperWebSocket" />
+    </serverTypes>
+  </superSocket>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
