Make tray verbose

--- a/Tray/Tray.csproj
+++ b/Tray/Tray.csproj
@@ -164,7 +164,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="logo.ico" />
+    <Content Include="logo.ico">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <None Include="Resources\logo.ico" />
   </ItemGroup>
   <ItemGroup />
