Enable GreenFOG and PrinterManager for Windows
To speed up the release of v0.10.0, GreenFOG and PrinterManager
are only windows compatible

--- a/UniversalInstaller/UniversalInstaller.csproj
+++ b/UniversalInstaller/UniversalInstaller.csproj
@@ -119,6 +119,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GenricUnixInstall.cs" />
     <Compile Include="Helper.cs" />
     <Compile Include="GUI.cs">
       <SubType>Form</SubType>
