--- a/Handlers/Handlers.csproj
+++ b/Handlers/Handlers.csproj
@@ -117,6 +117,7 @@
     <Compile Include="Log\Log.cs" />
     <Compile Include="Notification\Notification.cs" />
     <Compile Include="Bus\Bus.cs" />
+    <Compile Include="Process\ProcessHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
