--- a/Modules/Modules.csproj
+++ b/Modules/Modules.csproj
@@ -127,6 +127,7 @@
     <Compile Include="HostnameChanger\IHostName.cs" />
     <Compile Include="HostnameChanger\Linux\LinuxHostName.cs" />
     <Compile Include="HostnameChanger\Mac\MacHostName.cs" />
+    <Compile Include="HostnameChanger\Windows\WinActivation.cs" />
     <Compile Include="HostnameChanger\Windows\WindowsHostName.cs" />
     <Compile Include="PrinterManager\Printers\CUPSPrinter.cs" />
     <Compile Include="PrinterManager\PrintManagerBridge.cs" />
