--- a/Modules/Modules.csproj
+++ b/Modules/Modules.csproj
@@ -111,24 +111,24 @@
     <Reference Include="System.Xml.Linq">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
-    <Reference Include="Zazzles, Version=1.0.5764.34033, Culture=neutral, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\libs\Zazzles.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AutoLogOut\AutoLogOut.cs" />
+    <Compile Include="AutoLogOut\ALOMessage.cs" />
     <Compile Include="GreenFOG\GreenFOG.cs" />
+    <Compile Include="GreenFOG\GreenFOGMessage.cs" />
     <Compile Include="GreenFOG\IGreen.cs" />
-    <Compile Include="GreenFOG\Task.cs" />
+    <Compile Include="GreenFOG\GreenFOGTask.cs" />
     <Compile Include="GreenFOG\Unix\UnixGreen.cs" />
     <Compile Include="GreenFOG\Windows\WindowsGreen.cs" />
     <Compile Include="HostnameChanger\HostnameChanger.cs" />
+    <Compile Include="HostnameChanger\HostNameMessage.cs" />
     <Compile Include="HostnameChanger\IHostName.cs" />
     <Compile Include="HostnameChanger\Linux\LinuxHostName.cs" />
     <Compile Include="HostnameChanger\Mac\MacHostName.cs" />
     <Compile Include="HostnameChanger\Windows\WinActivation.cs" />
     <Compile Include="HostnameChanger\Windows\WindowsHostName.cs" />
+    <Compile Include="PrinterManager\PrinterMessage.cs" />
     <Compile Include="PrinterManager\Printers\CUPSPrinter.cs" />
     <Compile Include="PrinterManager\PrintManagerBridge.cs" />
     <Compile Include="PrinterManager\Printers\LocalPrinter.cs" />
@@ -141,12 +141,18 @@
     <Compile Include="PrinterManager\Windows\WindowsPrinterManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SnapinClient\SnapinClient.cs" />
+    <Compile Include="SnapinClient\SnapinMessage.cs" />
     <Compile Include="TaskReboot\TaskReboot.cs" />
-    <Compile Include="UserTracker\UserTracker.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\libs\zazzles\Zazzles\Zazzles.csproj">
+      <Project>{4cacd1de-ef40-4db9-8ee0-9dcb90c359e7}</Project>
+      <Name>Zazzles</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
