--- a/Debugger/Debugger.csproj
+++ b/Debugger/Debugger.csproj
@@ -126,6 +126,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Commands\DumpCommand.cs" />
     <Compile Include="Commands\ModuleCommand.cs" />
     <Compile Include="Debugger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
