--- a/Modules/Modules.csproj
+++ b/Modules/Modules.csproj
@@ -119,12 +119,12 @@
     <Compile Include="DisplayManager\DisplayManager.cs" />
     <Compile Include="DisplayManager\DisplayMessage.cs" />
     <Compile Include="DisplayManager\User_32.cs" />
-    <Compile Include="GreenFOG\CronNET\CronDaemon.cs" />
-    <Compile Include="GreenFOG\CronNET\CronJob.cs" />
-    <Compile Include="GreenFOG\CronNET\CronSchedule.cs" />
-    <Compile Include="GreenFOG\GreenFOGMessage.cs" />
-    <Compile Include="GreenFOG\GreenFOG.cs" />
-    <Compile Include="GreenFOG\Task.cs" />
+    <Compile Include="PowerManagement\CronNET\CronDaemon.cs" />
+    <Compile Include="PowerManagement\CronNET\CronJob.cs" />
+    <Compile Include="PowerManagement\CronNET\CronSchedule.cs" />
+    <Compile Include="PowerManagement\Task.cs" />
+    <Compile Include="PowerManagement\PowerManagementMessage.cs" />
+    <Compile Include="PowerManagement\PowerManagement.cs" />
     <Compile Include="HostnameChanger\HostnameChangerMessage.cs" />
     <Compile Include="HostnameChanger\HostnameChanger.cs" />
     <Compile Include="HostnameChanger\IHostName.cs" />
